# alttp-queue-bot

./: .env-template  .gitignore  Cargo.toml  README.md  alttp_queue.db3.bak  install.sh  log-dev.yaml  log-prod.yaml
api_responses/: game_categories_embedded_variables.json  runs.json  runs_embedded_players.json
conf_files/lib/systemd/system/: alttp-queue-bot.service
migrations/2022-08-21-183519_create_runs/: up.sql
migrations/2022-08-26-081107_add_aliases/: down.sql  up.sql
migrations/2022-08-26-091800_add_alttp_category_aliases/: up.sql
migrations/2022-09-04-174633_add_run_state/: down.sql  up.sql
migrations/2025-04-12-023920_simplify-runs/: down.sql  up.sql
src/: discord_client.rs  error.rs  lib.rs  main.rs  models.rs  schema.rs  src.rs  utils.rs
src/models/: aliases.rs  mod.rs  runs.rs
src/src/: category_repository.rs  mod.rs
