[package]
name = "alttp-queue-bot"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
name = "bot"
path = "src/main.rs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = "1"
serde_json = "1"
futures-util = "0.3"
twilight-http = "0.12.1"
twilight-model = "0.12.1"
twilight-util = { version = "0.12.1", features=["link"]}
dotenv = "0.15.0"
aliri_braid = "0.2.4"
libsqlite3-sys = { version = "=0.24.2", features = ["bundled"]}
diesel = { version = "2.0.0-rc.1", features = ["sqlite", "returning_clauses_for_sqlite_3_35"] }
diesel_migrations = "2.0.0-rc.1"
dashmap = "5.3.4"
log4rs = { version = "1.2.0", features = ["gzip"] }
log = "0.4.17"
thiserror = "1.0.37"
#speedrun-api = "1.1.1"

[dependencies.speedrun-api]
#path = "../speedrun-api"
#version = "1.1.1"
git = "https://github.com/FoxLisk/speedrun-api"
branch = "derive-eq-hash"

[dependencies.diesel_enum_derive]
git = "https://github.com/FoxLisk/diesel_enum_derive"
#path = "../diesel_enum_derive"